# chgksuite-fork

./: HISTORY.md
chgksuite/: pyproject.toml
chgksuite/chgksuite/: cli.py  common.py  typotools.py  version.py
chgksuite/chgksuite/composer/: composer_common.py  docx.py  pptx.py  telegram.py
chgksuite/chgksuite/handouter/: runner.py  split_fit.py  utils.py
chgksuite/chgksuite/resources/: pptx_config.toml
chgksuite/docs/docs/: handouts.md  pptx.md  word.md
chgksuite/tests/: chgksuite_test.py  handouter_layout_test.py  test_pptx_export.py
