[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chgksuite"
dynamic = ["version"]
authors = [
    {name = "Alexander Pecheny", email = "ap@pecheny.me"}
]
description = "A package for chgk automation"
readme = {text = """**chgksuite** is an utility that helps chgk editors.

[Chgk](https://en.wikipedia.org/wiki/What%3F_Where%3F_When%3F) (short for Chto? Gde? Kogda?) is a popular russian quiz.

Project home on gitlab: https://gitlab.com/peczony/chgksuite

Documentation (in Russian): https://peczony.gitlab.io/chgksuite
""", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "chardet==5.2.0",
    "dateparser",
    "mammoth",
    "openpyxl",
    "parse",
    "Pillow",
    "playwright",
    "ply",
    "pypandoc",
    "pypdf",
    "pyperclip",
    "python-docx",
    "python-pptx",
    "python-telegram-bot",
    "requests",
    "toml",
    "urllib3>=2.6.2",
    "watchdog",
]

[project.urls]
Homepage = "https://gitlab.com/peczony/chgksuite"

[project.scripts]
chgksuite = "chgksuite.__main__:main"

[tool.hatch.version]
path = "chgksuite/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "chgksuite/**/*",
    "/LICENSE",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["chgksuite"]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
markers = [
    "tex",
]
